--- a/_posts/2018-06-03-cors-fr_FR.markdown
+++ b/_posts/2018-06-03-cors-fr_FR.markdown
@@ -21,21 +21,21 @@ CORS (Cross-Origin Resource Sharing) est un sujet qui inspire la crainte chez be
 
 Qu’il s’agisse de récupérer du JSON, ou de tenter de configurer un CDN pour des contenus média, CORS semble être toujours là au mauvais moment. C’est pourquoi les développeurs ont appris à apaiser CORS, lui valant une réputation d’obstacle qui, pour une raison quelconque, améliore la sécurité de nos utilisateurs.
 
-Cet article cherche à démystifier CORS et montrer son bon côté: une spécification qui n’a pas pour but de freiner le progrès des développeurs web, mais plutôt de nous libérer de l’emprise de la _same-origin policy_. Nous allons parcourir chaque en-tête nécessaire au bon fonctionnement de CORS, puis parler de quelques endroits où CORS a son utilité et qui pourraient vous surprendre.
+Cet article cherche à démystifier CORS et montrer son bon côté : une spécification qui n’a pas pour but de freiner le progrès des développeurs web, mais plutôt de nous libérer de l’emprise de la _same-origin policy_. Nous allons parcourir chaque en-tête nécessaire au bon fonctionnement de CORS, puis parler de quelques endroits où CORS a son utilité et qui pourraient vous surprendre.
 
 ### La brève histoire de CORS
 
-CORS, ou l’idée qui allait devenir CORS, est né dans [l’ère du Web 2.0](https://www.oreilly.com/pub/a/web2/archive/what-is-web-20.html?){:target="_blank"}, vers 2005. Un des premiers buzzwords du Web 2.0 fut [AJAX](http://adaptivepath.org/ideas/ajax-new-approach-web-applications/){:target="_blank"}, ou "Asynchronous JavaScript and XML" ("JavaScript et XML asynchrones", en français), dont l’idée est que l’on peut utiliser l’API [XMLHttpRequest](https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest){:target="_blank"} pour mettre à jour une page de manière asynchrone, sans la rafraîchir complètement.
+CORS, ou l’idée qui allait devenir CORS, est né dans [l’ère du Web 2.0](https://www.oreilly.com/pub/a/web2/archive/what-is-web-20.html?){:target="_blank"}, vers 2005. Un des premiers *buzzwords* du Web 2.0 fut [AJAX](http://adaptivepath.org/ideas/ajax-new-approach-web-applications/){:target="_blank"}, ou "Asynchronous JavaScript and XML" ("JavaScript et XML asynchrones", en français), dont l’idée est que l’on peut utiliser l’API [XMLHttpRequest](https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest){:target="_blank"} pour mettre à jour une page de manière asynchrone, sans la rafraîchir complètement.
 
-Mais quand XMLHttpRequest est arrivé, celui-ci avait une restriction de taille: il était seulement possible pour son API de communiquer avec les services présents sur le même domaine que le site qui effectuait la requête. En pratique, cela signifie que si un site était disponible sur `https://iloveajax.com`, et que vous vouliez faire une requête vers `https://externalresource.com` (ou même `https://subdomain.iloverajax.com`), le navigateur refuserait de démarrer cette requête. C’est le principe de la [_same-origin policy_](https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy){:target="_blank"}.
+Mais quand XMLHttpRequest est arrivé, celui-ci avait une restriction de taille : il était seulement possible pour son API de communiquer avec les services présents sur le même domaine que le site qui effectuait la requête. En pratique, cela signifie que si un site était disponible sur `https://iloveajax.com`, et que vous vouliez faire une requête vers `https://externalresource.com` (ou même `https://subdomain.iloveajax.com`), le navigateur refuserait de démarrer cette requête. C’est le principe de la [_same-origin policy_](https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy){:target="_blank"}.
 
 AJAX prenant de l’ampleur, il devint clair qu’il fallait faire quelque chose à propos d’XMLHttpRequest et sa camisole _same-origin_. La communauté des développeurs web vit comment ouvrir AJAX à d’autres domaines pourrait mener à de nouveaux services et de nouvelles façons d’utiliser le web, et (attention, spoiler) c’est exactement ce qui se produisit quand on pense à Firebase, Mixpanel, New Relic, et autres. C’est vers cette époque (2005) que les gens commencèrent à ruser en utilisant quelque chose appelé [JSONP](https://en.wikipedia.org/wiki/JSONP){:target="_blank"}, qui détourne la balise `<script>` (et sa politique plutôt laxiste en matière de sécurité) pour effectuer des requêtes vers des services externes.
 
-En 2005 [le premier brouillon](https://www.w3.org/TR/2005/NOTE-access-control-20050613/){:target="_blank"} de ce qui deviendrait la spécification CORS fut publié. Mais il faudra attendre 2007 pour que les concepts majeurs de la spécification commencent à prendre forme, tels que le mécanisme du preflight et l’utilisation des en-têtes HTTP (à la place des balises XML), et sept ans de plus pour qu’elle devienne [une recommandation du W3C](https://www.w3.org/TR/2014/REC-cors-20140116/){:target="_blank"}. Entre temps, cependant, les navigateurs avaient déjà commencé à implémenter les parties stables de la spécification.
+En 2005 [le premier brouillon](https://www.w3.org/TR/2005/NOTE-access-control-20050613/){:target="_blank"} de ce qui deviendrait la spécification CORS fut publié. Mais il faudra attendre 2007 pour que les concepts majeurs de la spécification commencent à prendre forme, tels que le mécanisme du *preflight* et l’utilisation des en-têtes HTTP (à la place des balises XML), et sept ans de plus pour qu’elle devienne [une recommandation du W3C](https://www.w3.org/TR/2014/REC-cors-20140116/){:target="_blank"}. Entre temps, cependant, les navigateurs avaient déjà commencé à implémenter les parties stables de la spécification.
 
-Écrire des spécifications n’est pas chose aisée, mais vous êtes en droit de vous demander pourquoi celle-ci a pris une décennie à être rédigée. Quand vous pensez aux implications relatives à la sécurité autour de CORS, cependant, c’est déjà plus compréhensible. Le principal souci étant que la plupart (si ce n’est tous) des services web s’attendaient à ce que les requêtes non-GET qu’ils recevaient viennent de domaines spécifiques (généralement administrés par les mêmes personnes qui possédaient le service en question, étant donné que la _same-origin policy_ était en vigueur). Si CORS venait à être implémenté, cependant, et que la _same-origin policy_ était désactivée, ces mêmes services allaient pouvoir recevoir un déluge de requêtes DELETE, PUT, etc… depuis _n’importe quelle origine_, et il n’était pas envisageable de s’attendre à ce que chaque service web ouvert au public s’adapte à CORS avant sa recommandation par le W3C.
+Écrire des spécifications n’est pas chose aisée, mais vous êtes en droit de vous demander pourquoi celle-ci a pris une décennie à être rédigée. Quand vous pensez aux implications relatives à la sécurité autour de CORS, cependant, c’est déjà plus compréhensible. Le principal souci étant que la plupart des services web (si ce n’est tous) s’attendaient à ce que les requêtes non-GET qu’ils recevaient viennent de domaines spécifiques (généralement administrés par les mêmes personnes qui possédaient le service en question, étant donné que la _same-origin policy_ était en vigueur). Si CORS venait à être implémenté, cependant, et que la _same-origin policy_ était désactivée, ces mêmes services allaient pouvoir recevoir un déluge de requêtes DELETE, PUT, etc… depuis _n’importe quelle origine_, et il n’était pas envisageable de s’attendre à ce que chaque service web ouvert au public s’adapte à CORS avant sa recommandation par le W3C.
 
-La décision fut donc prise de rendre CORS opt-in, ce qui signifie que les navigateurs continueraient à appliquer la same-origin policy, sauf si un service web déclarait grâce à une série de signaux qu’il autorisait le contenu vers d’autres origines. Nous allons parler des spécificités de ce mécanisme appelé _preflighting_ dans un instant. En intégrant ce côté opt-in au design de CORS, cela signifiait que les services web n’auraient pas à répondre à une multitude de requêtes inattendues, et que les développeurs web allaient pouvoir commencer à construire de nouveaux types de services et d’outils.
+La décision fut donc prise de rendre CORS _opt-in_, ce qui signifie que les navigateurs continueraient à appliquer la _same-origin policy_, sauf si un service web déclarait grâce à une série de signaux qu’il autorisait le contenu vers d’autres origines. Nous allons parler des spécificités de ce mécanisme appelé _preflighting_ dans un instant. En intégrant ce côté _opt-in_ au design de CORS, cela signifiait que les services web n’auraient pas à répondre à une multitude de requêtes inattendues, et que les développeurs web allaient pouvoir commencer à construire de nouveaux types de services et d’outils.
 
 Peut-être que vous n’apprécierez jamais vraiment CORS. Mais s’il y a une chose pour laquelle on devrait tous être un minimum reconnaissants, c’est le fait que CORS a trouvé le juste équilibre entre rétrocompatibilité et l’ouverture d’un large éventail de nouvelles fonctionnalités aux développeurs web. Ce n’est pas chose facile ! Et pour mieux démontrer cet exploit, voyons ensemble comment CORS peut affecter vos requêtes web et comment vous pouvez éviter certains de ses subterfuges.
 
@@ -45,7 +45,7 @@ Peut-être que vous n’apprécierez jamais vraiment CORS. Mais s’il y a une c
 
 ### Preflighting
 
-Un des aspects les plus déroutants de CORS est son utilisation des requêtes _preflight_. Imaginez que vous lanciez la requête cross-domain POST suivante pour mettre à jour un profil utilisateur :
+Un des aspects les plus déroutants de CORS est son utilisation des requêtes _preflight_. Imaginez que vous lanciez la requête _cross-domain_ POST suivante pour mettre à jour un profil utilisateur :
 
 <pre><code>POST https://api.users.com/me HTTP/1.1
 Host: example.com
@@ -64,7 +64,7 @@ Access-Control-Request-Headers: content-type
 Access-Control-Request-Method: POST
 Origin: https://example.com</code></pre>
 
-Attendez un peu. Qu’est-ce qu’il vient de se passer ? La première requête `OPTIONS` est appelée requête _preflight_, et c’est l’implémentation concrète du côté opt-in de CORS dont nous parlions précédemment. Au-delà des requêtes qu’un élément `<form>` pourrait produire, que l’on appelle “requêtes simples” et que l’on abordera dans la prochaine partie, la spécification CORS demande aux navigateurs de consulter les serveurs avant de faire des requêtes _cross-origin_.
+Attendez un peu. Qu’est-ce qu’il vient de se passer ? La première requête `OPTIONS` est appelée requête _preflight_, et c’est l’implémentation concrète du côté _opt-in_ de CORS dont nous parlions précédemment. Au-delà des requêtes qu’un élément `<form>` pourrait produire, que l’on appelle “requêtes simples” et que l’on abordera dans la prochaine partie, la spécification CORS demande aux navigateurs de consulter les serveurs avant de faire des requêtes _cross-origin_.
 
 À quoi ressemble une requête _preflight_ ? Si notre endpoint ne connaît pas CORS, il pourrait retourner un code de statut tel que `404` ou `501`, ce qui indiquerait au navigateur qu’il doit annuler la requête.
 
@@ -77,7 +77,7 @@ Access-Control-Allow-Method: POST</code></pre>
 
 Cette réponse dit au navigateur que cet _endpoint_ peut seulement être accédé par `https://notyourdomain.com`, et qu’aucun autre domaine n’est autorisé à interagir avec lui. Le navigateur obéirait alors et mettrait fin à notre requête.
 
-Si le serveur supporte CORS et ne restreint pas les domaines pouvant interagir avec l’_endpoint_ en question, nous verrions sûrement :
+Si le serveur supporte CORS et n'impose pas de restrictions quant aux domaines pouvant interagir avec l’_endpoint_ en question, nous verrions sûrement :
 
 <pre><code>OPTIONS https://api.users.com HTTP/1.1
 Status: 200
@@ -94,7 +94,7 @@ Il y a quelques autres subtilités concernant les requêtes _preflight_, et pour
 
 ### Comprendre les requêtes simples
 
-S’il y a une chose que j’aurais aimé savoir plus tôt à propos de CORS, c’est comment celui-ci gère les _requêtes simples_. Pensez aux requêtes simples comme à n’importe quelle requête qu’un élément `<form>` pourrait initier. Pourquoi doit-on faire cette distinction ? Car avant CORS, les seules requêtes qu’une page web pouvait envoyer provenaient des éléments `<form>`. Ainsi,  comme ces mêmes requêtes était déjà permises avant l’arrivée de CORS, la spécification ne requiert pas que le navigateur effectue des requêtes _preflight_ pour elles.
+S’il y a une chose que j’aurais aimé savoir plus tôt à propos de CORS, c’est comment celui-ci gère les _requêtes simples_. Pensez aux requêtes simples comme à n’importe quelle requête qu’un élément `<form>` pourrait initier. Pourquoi doit-on faire cette distinction ? Car avant CORS, les seules requêtes qu’une page web pouvait envoyer provenaient des éléments `<form>`. Ainsi, comme ces mêmes requêtes étaient déjà permises avant l’arrivée de CORS, la spécification ne requiert pas que le navigateur effectue des requêtes _preflight_ pour elles.
 
 Pour rentrer dans les détails techniques, les requêtes simples sont une combinaison d’une [_méthode simple_](https://www.w3.org/TR/cors/#simple-method){:target="_blank"} avec un [_en-tête simple_](https://www.w3.org/TR/cors/#simple-header){:target="_blank"}.
 
