--- a/_posts/2018-09-23-hsts.md
+++ b/_posts/2018-09-23-hsts.md
@@ -16,7 +16,7 @@ In any good heist movie, it's ultimately the little details that make the differ
 
 Insecure HTTP connections are to web apps as vent systems are to casinos. Most web developers know that HTTP has its risks, and so obtain TLS certificates and enable HTTPS, perhaps even redirecting insecure traffic to HTTPS before serving their applications. Yet a crucial vulnerability remains: the initial HTTP connection that is made prior to redirection.
 
-Thankfully, there exists a means to ensure that virtually all connections to your app, even the first one, are made via HTTPS: HTTP Strict Transport Security, or HSTS. This post is going to explain HSTS in depth, and will also offer a short primer on the dangers even a single HTTP request can post to your application. We'll also cover a few gotchas and risks associated with HSTS.
+Thankfully, there exists a means to ensure that virtually all connections to your app, even the first one, are made via HTTPS: HTTP Strict Transport Security, or HSTS. This post is going to explain HSTS in depth, and will also offer a short primer on the dangers even a single HTTP request can pose to your application. We'll also cover a few gotchas and risks associated with HSTS.
 
 <figure>
   <img src="/public/svg/poker-table.svg" width="100%" style="max-width: 40rem; margin: 5rem 0;"/>
@@ -32,7 +32,7 @@ The first vector is simply sniffing your packets and using the data they contain
 
 The second vector is via a man-in-the-middle (MITM) attack, whereby the attacker hijacks your insecure connection to return a crafted response. This does require the attacker to have control of either a router or other network device in order to intercept your sessions. Comcast, one of the largest network hardware operators in the US, [routinely uses this technique](https://www.privateinternetaccess.com/blog/2016/12/comcast-still-uses-mitm-javascript-injection-serve-unwanted-ads-messages/){:target="_blank"} to show ads and messages. This vector poses a far greater risk given that the browser has little means of knowing if scripts or other resources were tampered with (unless you leverage [subresource integrity](https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity){:target="_blank"}).
 
-In either of the scenarios above, it only takes a single HTTP request to make your users vulnerable. As was mentioned at the beginning of this post, the HTTP request made just before you redirect your users to HTTPS can still be hijacked to return a malicious site instead of intended payload.
+In either of the scenarios above, it only takes a single HTTP request to make your users vulnerable. As was mentioned at the beginning of this post, the HTTP request made just before you redirect your users to HTTPS can still be hijacked to return a malicious site instead of the intended payload.
 
 <figure>
   <img src="/public/svg/security-guard.svg" width="100%" style="margin: 3rem 0; max-width: 20rem"/>
@@ -40,7 +40,7 @@ In either of the scenarios above, it only takes a single HTTP request to make yo
 
 ## Introducing HSTS
 
-HSTS, or HTTP Strict Transport Security, is mechanism for instructing browsers that your application ought never be accessed over an insecure connection. Defined in [RFC 6797](https://tools.ietf.org/html/rfc6797){:target="_blank"}, HSTS accomplishes its purpose via a header that tells browsers to load all future requests over HTTPS, and also a  means by which browsers can "preload" lists of apps that wish to leverage HSTS, thereby protecting against the [bootstrapping vulnerability](https://tools.ietf.org/html/rfc6797#page-36){:target="_blank"}. HSTS also prevents browsers from connecting to your app [via suspicious HTTPS connections](https://tools.ietf.org/html/rfc6797#section-8.4){:target="_blank"}, such as an attacker might use if trying to spoof HTTPS on one of your subdomains.
+HSTS, or HTTP Strict Transport Security, is mechanism for instructing browsers that your application ought never be accessed over an insecure connection. Defined in [RFC 6797](https://tools.ietf.org/html/rfc6797){:target="_blank"}, HSTS accomplishes its purpose via a header that tells browsers to load all future requests over HTTPS, and also a  means by which browsers can "preload" lists of apps that wish to leverage HSTS, thereby protecting against the [bootstrapping vulnerability](https://tools.ietf.org/html/rfc6797#page-36){:target="_blank"}. HSTS also prevents browsers from connecting to your app [via suspicious HTTPS connections](https://tools.ietf.org/html/rfc6797#section-8.4){:target="_blank"}, which would inevitably be the case if an attacker used a counterfeit TLS certificate.
 
 The initial seed of the HSTS specification was put forth in a paper by Collin Jackson and Adam Barth called [ForceHTTPS](https://crypto.stanford.edu/forcehttps/forcehttps.pdf){:target="_blank"}, published in 2008. Fast-forward to November 2012 and RFC 6797 is born, with both Jackson and Barth as editors.
 
@@ -55,7 +55,7 @@ Let's now dig into a few of the directives you can use to craft your HSTS policy
 
 ### The `max-age` Directive
 
-The `max-age` directive also let's the browser know that it should cache this HSTS response for certain number of seconds. The above response of `max-age=86400` species a caching period of a single day. As will be discussed in a later section, you should avoid setting long `max-age` durations when first rolling out HSTS, lest you inadvertnatly affect some of your users and have no means of rolling back.
+The `max-age` directive also lets the browser know that it should cache this HSTS response for certain number of seconds. The above response of `max-age=86400` specifies a caching period of a single day. As will be discussed in a later section, you should avoid setting long `max-age` durations when first rolling out HSTS, lest you inadvertnatly affect some of your users and have no means of rolling back.
 
 ### The `includeSubdomains` Directive
 
@@ -66,7 +66,7 @@ Strict-Transport-Security: max-age=86400; includeSubdomains</code></pre>
 
 Were a user to initiate a session with `api.mysecureapp.com` after caching the above policy, that session would immediately be upgraded to HTTPS by the browser. 
 
-You might wonder why such a powerful directive exists. Misapplied, it could render enter swaths of an application useless if they are unable to facilitate HTTPS connections. Yet the authors of RFC 6797 [offer a compelling justification](https://tools.ietf.org/html/rfc6797#section-14.4){:target="_blank"}: if you use cookies that are accessible to subdomains, you need an ability to protect them.
+You might wonder why such a powerful directive exists. Misapplied, it could render entire swaths of an application useless if they are unable to facilitate HTTPS connections. Yet the authors of RFC 6797 [offer a compelling justification](https://tools.ietf.org/html/rfc6797#section-14.4){:target="_blank"}: if you use cookies that are accessible to subdomains, you need an ability to protect them.
 
 Imagine the following scenario. You've applied HSTS to your top-level domain, `mysecureapp.com`, but not to subdomains. You have a cookie that is shared across `mysecureapp.com` as well as its subdomains, which you might argue is already a bad idea, but remains for legacy reasons. Nevertheless, it's been marked with the `Secure` flag, so it can't be transmitted over HTTP. 
 
@@ -98,7 +98,7 @@ Should you someday wish to remove your domain from Chromium's HSTS preload list,
 
 As you may have surmised, HSTS policies can be challenging to revert once deployed. In fact, the authors of RFC 6797 warn that HSTS would be an effective means by which to inflict [denial of service](https://tools.ietf.org/html/rfc6797#section-14.5){:target="_blank"} on site. Therefore, as we near the end of this post I wanted to share some thoughts on cautiously deploying a fledgling HSTS policy.
 
-Firstly, avoid long `max-age` durations out of the gate. Once a browser has cached your policy your only recourse is to wait until the browser dispenses with the policy, or begin telling your users to access a different part of your site. Thus, keeping `max-age` low will make it easier to rollback a poorly crafted policy.
+Firstly, avoid long `max-age` durations out of the gate. Once a browser has cached your policy, your only recourse is to wait until the browser dispenses with the policy, or begin telling your users to access a different part of your site. Thus, keeping `max-age` low will make it easier to rollback a poorly crafted policy.
 
 Secondly, if you plan to employ `includeSubdomains`, double-check that you've accounted for each subdomain your application uses, then triple-check and quadruple-check. If you're rolling out a new policy, test `includeSubdomains` early to ensure you have time to revert its inclusion or make changes.
 
@@ -118,4 +118,8 @@ As you strive to protect your users, tools like HSTS give you an edge. If we've 
 [ForceHTTPS](https://crypto.stanford.edu/forcehttps/)  
 [Preload Submission Site](https://hstspreload.org/)  
 [OWASP HSTS Cheat Sheet](https://www.owasp.org/index.php/HTTP_Strict_Transport_Security_Cheat_Sheet)  
-[Scott Helme on HSTS Propagation Times](https://scotthelme.co.uk/hsts-preload-test/)  
+[Scott Helme on HSTS Propagation Times](https://scotthelme.co.uk/hsts-preload-test/)
+
+## Illustrations
+
+Many thanks to [Dmitry Venevtsev](https://creativemarket.com/WINS){:target="_blank"} for this month's illustrations!
